--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3353,6 +3353,7 @@ body.is-touch .poptrox-popup .closer {
 	vertical-align: middle;
 	transform: translateY(-0.225em);
 	opacity: 0.5;
+	filter: invert(1);
 }
 
 /* SVG icons */
@@ -3363,6 +3364,7 @@ body.is-touch .poptrox-popup .closer {
 	vertical-align: middle;
 	transform: translateY(-0.225em);
 	opacity: 0.5;
+	filter: invert(1);
 }
 
 #footer a {
