--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3357,7 +3357,7 @@ body.is-touch .poptrox-popup .closer {
 }
 
 /* SVG icons */
-#footer .icons .svg-icon {
+.icon-svg {
   width: 1.3em;
   height: 1.3em;
   display: inline-block;
@@ -3450,4 +3450,11 @@ a.image.fit.thumb img {
 .work-item:nth-of-type(4) > a.image.fit.thumb > img {
   transform: scale(0.95);
   transform-origin: center;
+}
+
+/* FORCE footer custom icons to match Font Awesome */
+#footer .icons img.svg-icon,
+#footer .icons img.icon-png {
+  filter: brightness(0) invert(1) !important; /* makes any color -> white */
+  opacity: 0.4 !important;                   /* match #footer .icons a */
 }
