--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3357,17 +3357,13 @@ body.is-touch .poptrox-popup .closer {
 }
 
 /* SVG icons */
-.icon-svg {
+.svg-icon {
   width: 1.3em;
   height: 1.3em;
   display: inline-block;
   vertical-align: middle;
   transform: translateY(-0.225em);
-
-  /* key change: make everything black, then invert -> white */
   filter: brightness(0) invert(1);
-
-  /* match Font Awesome in your footer (#footer .icons a is 0.4) */
   opacity: 0.4;
 }
 
@@ -3452,9 +3448,10 @@ a.image.fit.thumb img {
   transform-origin: center;
 }
 
-/* FORCE footer custom icons to match Font Awesome */
+#footer .icons a:hover img.svg-icon,
+#footer .icons a:hover img.icon-png,
 #footer .icons img.svg-icon,
 #footer .icons img.icon-png {
-  filter: brightness(0) invert(1) !important; /* makes any color -> white */
-  opacity: 0.4 !important;                   /* match #footer .icons a */
+  filter: brightness(0) invert(1) !important;
+  opacity: 0.4 !important;
 }
